# hello-opengl

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: ProjectFormatting.cmake  ProjectWarnings.cmake
src/: main.cpp
